Add request/:id/cancel endpoint
